# audio_codec

./: .gitignore  CMakeLists.txt  Hello.enc  README.md  main.cpp  output.txt  output.waw  tmp.txt
examples/: Lem2400.enc
inc/: errors.h  wav.h
speex-1.2.0/libspeex/: arch.h  bits.c  ltp.h  modes.c  modes.h  modes_wb.c  nb_celp.h  speex.c  speex_callbacks.c  speex_header.c  stereo.c  testenc.c  testenc_uwb.c  testenc_wb.c
src/: wav.cpp
